--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "expo": "~46.0.16",
+    "expo-auth-session": "~3.7.1",
     "expo-font": "~10.2.0",
+    "expo-random": "~12.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-web-browser": "~11.0.0",
     "native-base": "^3.4.20",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
